# fastapi-aula-main

./: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: b26a512be62c_initiate.py
src/: main.py
src/ai/prompts/: generate_post_prompt.py
src/ai/structured_outputs/: posts.py
src/crud/: posts.py
src/db/: engine.py
src/models/: posts.py
src/routes/api/v1/: posts.py
src/schemas/: posts.py
src/services/: openai_service.py
tests/: conftest.py  test_openai_service.py
